--- a/practica02/index.html
+++ b/practica02/index.html
@@ -27,7 +27,9 @@
 				<img src="img/slide.jpg" alt="">
 			</article>
 			<article id="secc01art2">
+				<span>	
 				We can offer...
+			</span class="colorrosa letragrande nito">
 				<ul>
 					<li>Highly Competitive Prices</li>
 					<li>Variable Data</li>
@@ -43,14 +45,18 @@
 		</section>
 		<section id="segundaSeccion">
 			<article>
-				01772 250207
+				<span class="colorrosa letramediana nito">	
+						01772 250207
+			    </span>
 			</article>
 			
 		</section>
-		<section>
+		<section id="terceraSeccion">
 			<article>
 				<img src="img/cerdito.png" alt="">
+				<span class="colorrosa nito">	
 				Save this Spring 
+				</span>
 				<br>
 				Fabulous discounts on canvas and roll up's
 				as well many affers
@@ -59,7 +65,9 @@
 			</article>
 			<article>
 				<img src="img/hoja.png" alt="">
+				<span class="colorverde nito " >
 				ECO Friendly
+			    </span>
 				<br>
 				ECO Friendly Materials user in our
 				production process. <br>
@@ -69,6 +77,7 @@
 			</article>
 			<article>
 				<img src="img/new.png" alt="">
+				<span class="colorazul nito">	
 				Unpload your file 
 				<br>
 				Making it easy to otder your printing today. Our
@@ -79,8 +88,10 @@
 				<p>
 				Upload your File Now...
 			</article>
-			<article>
+			<article id="article04">
+				<span class="colorrosa nito">	
 				Stay in touch 
+				</span>
 				<br>
 				Join our mailing list today <br>
 				<input type="email" placeholder="Email goes here">
