--- a/practica04css3/index.html
+++ b/practica04css3/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<header>
-		<img src="img/first_bike.png" alt="">
-		<img src="img/logo_rojo.png" alt="">
-		<img src="img/bandera.png" alt="">
+		<img src="img/first_bike.png" alt="" id="first">
+		<img src="img/logo_rojo.png" alt="" id="rojo">
+		<img src="img/bandera.png" alt="" id="">
 		<img src="img/mundo.png" alt="">
 		<img src="img/buy.png" alt="">
 		<img src="img/go_to_shop.png" alt="">
