--- a/exa02_12/index.html
+++ b/exa02_12/index.html
@@ -12,7 +12,7 @@
 		</article>
 		<article id="a2s1">
 			<br>
-			<span class="nito grande">Commision Us</span>
+			<span id="span2s1"class="nito grande">Commision Us</span>
 			<br>
 			<span class=" mediano"> 
 			We are passionate about working with local <br>
@@ -36,22 +36,22 @@
 	<section id="s2">
 		<article id="a1s2">
 			<img src="img/twitter.png" id="twitter">
-			<span class="blanco letra">
+			<span  class="blanco letra">
 				@KCGCollection thank you for letting <br>
 				me explore the archives on Sat - it <br>
 				was a great day seeing the colletions! <br>
-				https://t.co/MhOP67K6Sa
+				https://t.co/MhOP67K6Sa 
 			</span>
 		</article>
 		<article id="a2s2">
 			<br>
-				<span class="nito middle "> ANY QUESTION?</span>
+				<span id="span1s2" class="nito middle "> ANY QUESTION?</span>
 				<br>
 				<button class="nito mediano btnblack ">GET IN TOUCH</button>
 		</article>
 		<article id="a3s2">
 			<br>
-			<span id="span1" class="nito middle blanco "> MEET THE OWNER</span>
+			<span id="span2s2" class="nito middle blanco "> MEET THE OWNER</span>
 			<br>
 				<button class="nito mediano btnblanco blanco">ZOE</button>
 		</article>
