--- a/arrastrarysoltar.html
+++ b/arrastrarysoltar.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<h2>Arrastrar y soltar</h2>
-	<div id="div1">
+	<div id="div1" ondragover="allowDrop(event)" ondrop="drop(event)">
 		<img src="imgpw/twitter.png" draggable="true" ondragstart="drag(event)" id="logo1">
 		<img src="imgpw/twitter.png" draggable="true" ondragstart="drag(event)" id="logo2">
 		<img src="imgpw/twitter.png" draggable="true" ondragstart="drag(event)" id="logo3">
@@ -28,5 +28,31 @@
 	<div id="div2" ondragover="allowDrop(event)" ondrop="drop(event)">
 		
 	</div>
+	<script>
+		function drag(ev){
+			//copio el id de la imagen al evento con el alias text
+			ev.dataTransfer.setData("text",ev.target.id);
+
+		}
+		function allowDrop(ev){
+			//desactivamos el evento que rechaza el objeto
+			ev.preventDefault();
+		}
+		function drop(ev){
+			ev.preventDefault();
+			var data=ev.dataTransfer.getData("text");
+			ev.target.appendChild(document.getElementById(data));
+		}
+	</script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
